--- a/vitalmob/register.html
+++ b/vitalmob/register.html
@@ -22,7 +22,7 @@
               </div>
               <form class="reghome_form" action="{% url 'login_pass' %}">                                            
                 <button type="submit" class="login_button text-center">REGISTER</button>
-                <p class="text-center"> <a class="forget_text" href="#">Are you member?  Log In</a></p>
+                <p class="text-center"> <a class="forget_text" href="login.html">Are you member?  Log In</a></p>
               </form>
         </div>
         
