--- a/vitalmob/login.html
+++ b/vitalmob/login.html
@@ -21,7 +21,24 @@
                 <img src="img/login_logo.png">
             </div>
         </div>
-        
+        <form class="log_reg_form">
+            <div class="form-group">
+            <label for="usr">Email:</label>
+            <input type="text" id="usr">
+            </div>
+            <div class="form-group">
+            <label for="pwd">Password:</label>
+            <input type="password" id="pwd">
+            </div>
+            <p class="forgot_pwd_text"><a href="">Forgot your password</a></p>
+            <button type="submit" class="register_button_inner text-center">LOG IN</button>
+            
+        </form> <!--End log_reg_form -->
+
+        <div class="bottom_text">
+            <p class="continue_text text-center"><a href="register_page.html">Continue to REGISTER</p></a>
+        </div>
+
 
 
 
