minor corrections and icons added

--- a/vitalmob/register_page.html
+++ b/vitalmob/register_page.html
@@ -19,8 +19,7 @@
         <div class="bgimage">
             <div class="log_logo">
                 <img src="img/login_logo.png">
-            </div>
-        </div>
+            </div>        
         <form class="log_reg_form">
                 <div class="form-group">
                     <label for="usr">Email:</label>
@@ -32,17 +31,21 @@
                 </div>
                 <div class="form-group">
                     <label for="pwd">Password:</label>
-                    <input type="password" id="pwd">
-                </div> 
+                    <input class = "pass_mar" type="password" id="pwd">
+                </div>
+                <div class="text-right"> 
                 <label class="container">Accept Privacy Policy & Terms
                   <input type="checkbox" checked="checked">
                   <span class="checkmark"></span>
               </label>
+          </div>
             <button type="submit" class="register_button_inner text-center">REGISTER</button>
 
         </form> <!--End log_reg_form -->
+        
         <div class="bottom_text">
-            <p class="continue_text text-center"><a href="">Continue Logged IN</a></p>
+            <p class="continue_text text-center"><a href="login.html ">Continue Logged IN</a></p>
+        </div>
         </div>
 
 
