--- a/vitalmob/login.html
+++ b/vitalmob/login.html
@@ -20,15 +20,15 @@
             <div class="log_logo">
                 <img src="img/login_logo.png">
             </div>
-        </div>
+        
         <form class="log_reg_form">
             <div class="form-group">
-            <label for="usr">Email:</label>
+            <label for="usr">Email</label>
             <input type="text" id="usr">
             </div>
             <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" id="pwd">
+            <label for="pwd">Password</label>
+            <input class="pass_mar" type="password" id="pwd">
             </div>
             <p class="forgot_pwd_text"><a href="">Forgot your password</a></p>
             <button type="submit" class="register_button_inner text-center">LOG IN</button>
@@ -38,7 +38,7 @@
         <div class="bottom_text">
             <p class="continue_text text-center"><a href="register_page.html">Continue to REGISTER</p></a>
         </div>
-
+        </div>
 
 
 
