--- a/vitalmob/vitalis.html
+++ b/vitalmob/vitalis.html
@@ -99,8 +99,8 @@
 
 
                
-            </div>
-        </div>
+            </div> <!-- content -->
+        </div> <!-- wrapper -->
 
 
 
