register_page_two.html updated

--- a/vitalmob/register_page_two.html
+++ b/vitalmob/register_page_two.html
@@ -28,7 +28,7 @@
             <label class="reglab2"for="country">Country:</label><input type="text" class="regpg_2" id="usr">
             <label class="reglab2"for="location">Location:</label><input type="text" class="regpg_2" id="usr">
             <p>Calories Calculation Data</p>
-            <label class="reglab2" for="birth_date">Birth Date:</label><input type="text" class="regpg_2" id="usr" placeholder="dd/my/aa">
+            <label class="reglab2" for="birth_date">Birth Date:</label><input type="text" class="regpg_2" id="usr" placeholder="dd/mm/aa">
             <label class="reglab2"for="gender">Gender:</label><input type="text" class="regpg_2" id="usr" placeholder="Male/Female">
             <label class="reglab2"for="height">Height:</label><input type="text" class="regpg_2" id="usr" placeholder="Feet/Inches" >
             <label class="reglab2"for="weight">Weight:</label><input type="text" class="regpg_2" id="usr" placeholder="pounds">
