--- a/vitalmob/notification.html
+++ b/vitalmob/notification.html
@@ -85,9 +85,15 @@
                 <div class="notification_topic text-left"> 
                     <p>NOTIFICATIONS</p>
                 </div>
-                <div class="">
+                <ul class="notification_list">
+                    <li><span></span>Welcome Oriol to Vitalsfera App</li>
+                    <li><span></span>What is Vitalis?</li>
+                    <li><span></span>Walk to stay healthy</li>
+                </ul>
+                <div class="notification_topic text-left"> 
+                    <p>CALENDER</p>
                 </div>
-
+            
                
             </div>
         </div>
