--- a/vitalmob/register_page_two.html
+++ b/vitalmob/register_page_two.html
@@ -20,6 +20,10 @@
             <div class="log_logo">
                 <img src="img/login_logo.png">
             </div>
+            <div class="heading text-left">
+                <p>REGISTRATION 2/2</p>
+                <hr class="reg_hr">
+            </div>
         
         <form class="log_reg_form ">
             <p>Contact Details</p>
