--- a/vitalmob/vitalis.html
+++ b/vitalmob/vitalis.html
@@ -21,23 +21,15 @@
             <!-- Sidebar Holder -->
             <nav id="sidebar">
 
-                <ul class="list-unstyled components" id="navlist"> 
+                <ul class="list-unstyled components" id="navMenus"> 
                     <li>
-                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"><span class="menu_icon"><img width="15px" height="15px" src="img/help.png"></span>HELP</a>
-                        <ul class="collapse list-unstyled" id="homeSubmenu">
-                            <!-- <li><a href="#">Home 1</a></li>
-                            <li><a href="#">Home 2</a></li>
-                            <li><a href="#">Home 3</a></li> -->
-                        </ul>
+                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"><span class="menu_icon"><img width="15px" height="15px" src="img/help.png"></span>HELP</a>                       
                     </li>
                     <li>
                         <a href="#"><span class="menu_icon"><img width="15px" height="15px" src="img/profile.png"></span>PROFILE</a>
+                    </li>
+                    <li>
                         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"><span class="menu_icon"><img width="15px" height="15px" src="img/account.png"></span>ACCOUNT</a>
-                        <ul class="collapse list-unstyled" id="pageSubmenu">
-                           <!--  <li><a href="#">Page 1</a></li>
-                            <li><a href="#">Page 2</a></li>
-                            <li><a href="#">Page 3</a></li> -->
-                        </ul>
                     </li>
                     <li>
                         <a href="#languageSubmenu" data-toggle="collapse" aria-expanded="false"><span class="menu_icon"><img width="15px" height="15px" src="img/language.png"></span>LANGUAGES</a>
@@ -131,10 +123,15 @@
                     $('.collapse.in').toggleClass('in');
                     $('a[aria-expanded=true]').attr('aria-expanded', 'false');
                 });
-                $('#navlist a').click(function(e) {
-                    e.preventDefault(); //prevent the link from being followed
-                    $('#navlist a').removeClass('selected');
-                    $(this).addClass('selected');
+                $("#navMenus").on('click', 'li', function () {
+                $("#navMenus li.active").removeClass("active");
+                // adding classname 'active' to current click li 
+                $(this).addClass("active");
+                });
+                $("#languageSubmenu").on('click', 'li', function () {
+                $("#languageSubmenu li.active").removeClass("active");
+                // adding classname 'active' to current click li 
+                $(this).addClass("active");
                 });
             });
         </script>
