--- a/vitalmob/notification.html
+++ b/vitalmob/notification.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Collapsible sidebar using Bootstrap 3</title>
+        <title>VitalSfera</title>
 
         <!-- Bootstrap CSS CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- Our Custom CSS -->
         <link rel="stylesheet" href="css/style.css">
         <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
         
     </head>
     <body>
@@ -21,9 +21,9 @@
             <!-- Sidebar Holder -->
             <nav id="sidebar">
 
-                <ul class="list-unstyled components" id="navlist"> 
+                <ul class="list-unstyled components" id="navMenus"> 
                     <li>
-                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">HELP</a>
+                        <a href="#homeSubmenu"><span class="menu_icon"><img width="15px" height="15px" src="img/help.png"></span>HELP</a>
                         <ul class="collapse list-unstyled" id="homeSubmenu">
                             <!-- <li><a href="#">Home 1</a></li>
                             <li><a href="#">Home 2</a></li>
@@ -31,8 +31,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">PROFILE</a>
-                        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">ACCOUNT</a>
+                        <a href="#"><span class="menu_icon"><img width="15px" height="15px" src="img/profile.png"></span>PROFILE</a>
+                    </li>
+                    <li>
+                        <a href="#pageSubmenu"><span class="menu_icon"><img width="15px" height="15px" src="img/account.png"></span>ACCOUNT</a>
                         <ul class="collapse list-unstyled" id="pageSubmenu">
                            <!--  <li><a href="#">Page 1</a></li>
                             <li><a href="#">Page 2</a></li>
@@ -40,7 +42,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#languageSubmenu" data-toggle="collapse" aria-expanded="false">LANGUAGES</a>
+                        <a href="#languageSubmenu" data-toggle="collapse" aria-expanded="false"><span class="menu_icon"><img width="15px" height="15px" src="img/language.png"></span>LANGUAGES</a>
                           <ul class="collapse list-unstyled" id="languageSubmenu">
                             <li><a href="#">ENGLISH</a></li>
                             <li><a href="#">ESPANOL</a></li>
@@ -48,7 +50,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">SIGN OUT</a>
+                        <a href="#"><span class="menu_icon"><img width="15px" height="15px" src="img/signout.png"></span>SIGN OUT</a>
                     </li>
                 </ul>
             </nav>
@@ -104,11 +106,11 @@
 
 
         <!-- jQuery CDN -->
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="js/jquery-1.12.0.min.js"></script>
         <!-- Bootstrap Js CDN -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <!-- jQuery Custom Scroller CDN -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+        <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 
         <script type="text/javascript">
             $(document).ready(function () {
@@ -127,10 +129,10 @@
                     $('.collapse.in').toggleClass('in');
                     $('a[aria-expanded=true]').attr('aria-expanded', 'false');
                 });
-                $('#navlist a').click(function(e) {
-                    e.preventDefault(); //prevent the link from being followed
-                    $('#navlist a').removeClass('selected');
-                    $(this).addClass('selected');
+                $("#navMenus").on('click', 'li', function () {
+                $("#navMenus li.active").removeClass("active");
+                // adding classname 'active' to current click li 
+                $(this).addClass("active");
                 });
             });
         </script>
