--- a/vitalmob/login.html
+++ b/vitalmob/login.html
@@ -21,7 +21,7 @@
                 <img src="img/login_logo.png">
             </div>
         
-        <form class="log_reg_form">
+        <form class="log_reg_form" action="notification.html">
             <div class="form-group">
             <label for="usr">Email</label>
             <input type="text" id="usr">
