--- a/vitalmob/notification.html
+++ b/vitalmob/notification.html
@@ -87,7 +87,7 @@
 
                 <ul class="notification_list">
                     <li><a href="#"><span><img src="img/right_arrow.png"></span>Welcome Oriol to Vitalsfera App</a></li>
-                    <li><a href="#"><span><img src="img/right_arrow.png"></span>What is Vitalis?</a></li>
+                    <li><a href="vitalis.html"><span><img src="img/right_arrow.png"></span>What is Vitalis?</a></li>
                     <li><a href="#"><span><img src="img/right_arrow.png"></span>Walk to stay healthy</a></li>
                 </ul>
                 <div class="notification_topic text-left"> 
