--- a/vitalmob/register.html
+++ b/vitalmob/register.html
@@ -20,8 +20,8 @@
             <div class="home_screen">
                 <img src="img/main_logo.png">               
               </div>
-              <form class="reghome_form" action="register_page">                                            
-                <button class="login_button text-center">REGISTER</button>
+              <form class="reghome_form" action="register_page.html">                                           
+                <button type="submit" class="login_button text-center">REGISTER</button>
                 <p class="text-center"> <a class="forget_text" href="login.html">Are you member?  Log In</a></p>
               </form>
         </div>
