--- a/vitalmob/register_page.html
+++ b/vitalmob/register_page.html
@@ -20,7 +20,7 @@
             <div class="log_logo">
                 <img src="img/login_logo.png">
             </div>        
-        <form class="log_reg_form">
+        <form class="log_reg_form" action="register_page_two.html">
                 <div class="form-group">
                     <label for="usr">Email:</label>
                     <input type="text" id="usr">
@@ -44,7 +44,7 @@
         </form> <!--End log_reg_form -->
         
         <div class="bottom_text">
-            <p class="continue_text text-center"><a href="login.html ">Continue Logged IN</a></p>
+            <p class="continue_text text-center"><a href="login.html ">Continue LOGGING IN</a></p>
         </div>
         </div>
 
