--- a/vitalmob/vitalis.html
+++ b/vitalmob/vitalis.html
@@ -88,7 +88,7 @@
                     <p>Check out with your company for more information or drop us a line here: 
                     <strong>corporate@vitalsfera.com</strong></p>
 
-                    <p class="back"><a href="">< Back</a></p>
+                    <p class="back"><a href="notification.html">< Back</a></p>
 
                 </div>
 
