--- a/vitalmob/register_page_two.html
+++ b/vitalmob/register_page_two.html
@@ -25,7 +25,7 @@
                 <hr class="reg_hr">
             </div>
         
-        <form class="log_reg_form ">
+        <form class="log_reg_form " action="login.html">
             <p>Contact Details</p>
             <label class="reglab2" for="name">Name:</label><input type="text" class="regpg_2" id="usr">
             <label class="reglab2"for="surname">Surname:</label><input type="text" class="regpg_2" id="usr">
