--- a/vitalmob/register_page.html
+++ b/vitalmob/register_page.html
@@ -20,7 +20,7 @@
             <div class="log_logo">
                 <img src="img/login_logo.png">
             </div>        
-        <form class="log_reg_form" action="login.html">
+        <form class="log_reg_form" action="register_page_two.html">
                 <div class="form-group">
                     <label for="usr">Email:</label>
                     <input type="text" id="usr">
